--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "building-npm-packages",
+  "name": "@bitwhys/utils",
   "version": "0.0.1",
   "main": "index.js",
   "author": "George Bockari <bitwhys@cr8iv.io>",
