--- a/consumer/package.json
+++ b/consumer/package.json
@@ -20,6 +20,7 @@
     "tailwindcss": "^3.2.1"
   },
   "dependencies": {
+    "@bitwhys/utils": "^0.0.1",
     "@fontsource/lexend": "^4.5.13"
   }
 }
