--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "@bitwhys/utils",
   "version": "0.0.1",
   "main": "index.js",
+  "files": [
+    "src/index.js"
+  ],
   "author": "George Bockari <bitwhys@cr8iv.io>",
   "license": "MIT",
   "scripts": {
