--- a/package.json
+++ b/package.json
@@ -2,12 +2,10 @@
   "name": "@bitwhys/utils",
   "version": "0.0.2",
   "main": "index.js",
-  "files": [
-    "src/index.js"
-  ],
   "author": "George Bockari <bitwhys@cr8iv.io>",
   "license": "MIT",
   "scripts": {
+    "build": "scripts/build.sh",
     "cz": "cz"
   },
   "devDependencies": {
